--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,10 +63,12 @@ html{
 }
 .video{
   width: 400px;
+  height: 400px;
 }
 @media (max-width:900px) {
   .video{
     width: 300px;
+    height: 300px;
   }
 }
 @media (max-width:750px) {
@@ -438,7 +440,7 @@ html{
   .mint{
     display: flex;
     justify-content: center;
-    width: 0;
+    width: 200px;
     
   }
   .innergride0{
