--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,6 +61,10 @@ html{
   display: flex;
   align-items: center;
 }
+.width{
+  display: flex;
+  justify-content: center;
+}
 .video{
   width: 400px;
   height: 400px;
